[gd_scene load_steps=3 format=3 uid="uid://chrw4i0nksphn"]

[ext_resource type="Script" path="res://examples/11-bone-node/bone-node.gd" id="1"]
[ext_resource type="SpineSkeletonDataResource" path="res://assets/spineboy/spineboy-data-res.tres" id="2"]

[node name="Node2D" type="Node2D"]
script = ExtResource( "1" )

[node name="SpineSprite" type="SpineSprite" parent="."]
position = Vector2(8, 553)
scale = Vector2(0.278096, 0.278096)
skeleton_data_res = ExtResource( "2" )
update_mode = 1
preview_animation = "hoverboard"
preview_frame = true
preview_time = 0.0

[node name="HoverboardCenterBone" type="SpineBoneNode" parent="SpineSprite"]
show_behind_parent = true
bone_name = "hoverboard-controller"
bone_mode = 1

[node name="RayCast2D" type="RayCast2D" parent="SpineSprite/HoverboardCenterBone"]

[node name="HoverboardTargetBone" type="SpineBoneNode" parent="SpineSprite"]
show_behind_parent = true
position = Vector2(262.499, 0)
rotation = -0.000872665
bone_name = "board-ik"
bone_mode = 1

[node name="RayCast2D" type="RayCast2D" parent="SpineSprite/HoverboardTargetBone"]

[node name="HipBone" type="SpineBoneNode" parent="SpineSprite"]
show_behind_parent = true
position = Vector2(0, -169.006)
rotation = -0.000872665
bone_name = "hip"
bone_mode = 1

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, 596, 309, 471, 516, 515, 762, 447, 984, 504, 1023, 505, 1024, 596)

[node name="StaticBody2D" type="StaticBody2D" parent="Polygon2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Polygon2D/StaticBody2D"]
polygon = PackedVector2Array(3, 592, 304, 469, 516, 514, 762, 443, 984, 499, 1252, 498, 1280, 596)
